--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/micro30.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="google-site-verification" content="_mPT8bt-0g-pumdRch5xa9grRDQqR_eGS5aCQ7BxYFY" />
     <meta
       name="description"
       content="Web site created using create-react-app"
