--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="google-site-verification" content="_mPT8bt-0g-pumdRch5xa9grRDQqR_eGS5aCQ7BxYFY" />
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
     <meta
       name="description"
       content="Web site created using create-react-app"
@@ -30,7 +31,7 @@
       href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/all.min.css"
     />
 
-    <title>React App</title>
+    <title> Hardware Hot Sales </title>
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
