--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/micro30.jpg" />
+    <link rel="icon" href="%PUBLIC_URL%/micro30.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="google-site-verification" content="_mPT8bt-0g-pumdRch5xa9grRDQqR_eGS5aCQ7BxYFY" />
